[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Font/fonts/source-code-pro/source-code-pro-2.010R-ro-1.030R-it/TTF/SourceCodePro-BoldIt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Font/fonts/source-code-pro/source-code-pro-2.010R-ro-1.030R-it/TTF/SourceCodePro-SemiboldIt.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Font/fonts/source-code-pro/source-code-pro-2.010R-ro-1.030R-it/TTF/SourceCodePro-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Login/CreateAccount.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = ExtResource( 2 )

[node name="CreateAccount" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -957.958
margin_top = -536.966
margin_right = 962.042
margin_bottom = 543.034
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateAccountTitle" type="Label" parent="Background"]
margin_left = 579.161
margin_top = 224.96
margin_right = 1413.16
margin_bottom = 338.96
custom_fonts/font = SubResource( 1 )
text = "Create Account"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameTitle" type="Label" parent="Background"]
margin_left = 394.676
margin_top = 357.935
margin_right = 674.676
margin_bottom = 396.935
custom_fonts/font = SubResource( 2 )
text = "Student Name"

[node name="Name" type="LineEdit" parent="Background"]
margin_left = 707.016
margin_top = 355.427
margin_right = 1307.02
margin_bottom = 385.427
rect_min_size = Vector2( 600, 30 )

[node name="GenderTitle" type="Label" parent="Background"]
margin_left = 396.895
margin_top = 413.0
margin_right = 619.895
margin_bottom = 467.0
custom_fonts/font = SubResource( 3 )
text = "Gender"
valign = 1

[node name="Male" type="Button" parent="Background"]
margin_left = 711.113
margin_top = 408.99
margin_right = 911.113
margin_bottom = 448.99
rect_min_size = Vector2( 200, 40 )
toggle_mode = true
action_mode = 0
text = "Male"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Female" type="Button" parent="Background"]
margin_left = 1107.35
margin_top = 407.056
margin_right = 1307.35
margin_bottom = 447.056
rect_min_size = Vector2( 200, 40 )
toggle_mode = true
action_mode = 0
text = "Female"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgeTitle" type="Label" parent="Background"]
margin_left = 399.986
margin_top = 478.142
margin_right = 615.986
margin_bottom = 517.142
custom_fonts/font = SubResource( 4 )
text = "Age"

[node name="Age" type="LineEdit" parent="Background"]
margin_left = 711.032
margin_top = 478.201
margin_right = 1311.03
margin_bottom = 508.201
rect_min_size = Vector2( 600, 30 )

[node name="EmailTitle" type="Label" parent="Background"]
margin_left = 399.678
margin_top = 531.081
margin_right = 604.678
margin_bottom = 570.081
custom_fonts/font = SubResource( 5 )
text = "Email"

[node name="Email" type="LineEdit" parent="Background"]
margin_left = 711.0
margin_top = 536.371
margin_right = 1311.0
margin_bottom = 566.371
rect_min_size = Vector2( 600, 30 )

[node name="PasswordTitle" type="Label" parent="Background"]
margin_left = 395.544
margin_top = 595.68
margin_right = 584.544
margin_bottom = 634.68
custom_fonts/font = SubResource( 6 )
text = "Password"

[node name="Password" type="LineEdit" parent="Background"]
margin_left = 711.0
margin_top = 601.564
margin_right = 1311.0
margin_bottom = 631.564
rect_min_size = Vector2( 600, 30 )
secret = true

[node name="ConfirmPasswordTitle" type="Label" parent="Background"]
margin_left = 393.727
margin_top = 646.89
margin_right = 695.727
margin_bottom = 685.89
custom_fonts/font = SubResource( 7 )
text = "Confirm Password"

[node name="ConfirmPassword" type="LineEdit" parent="Background"]
margin_left = 710.458
margin_top = 655.482
margin_right = 1310.46
margin_bottom = 685.482
rect_min_size = Vector2( 600, 30 )
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorMessage" type="Label" parent="Background"]
anchor_right = 0.113
anchor_bottom = 0.208
margin_left = 713.992
margin_top = 684.911
margin_right = 1092.03
margin_bottom = 492.271
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.501961, 0.0313726, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Register" type="Button" parent="Background"]
margin_left = 713.0
margin_top = 733.0
margin_right = 1313.0
margin_bottom = 790.0
custom_fonts/font = SubResource( 9 )
text = "Register"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="Background"]
margin_left = 715.0
margin_top = 819.0
margin_right = 1315.0
margin_bottom = 876.0
rect_min_size = Vector2( 0, 57 )
custom_fonts/font = SubResource( 10 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="Background/Male" to="." method="_on_Male_toggled"]
[connection signal="toggled" from="Background/Female" to="." method="_on_Female_toggled"]
[connection signal="pressed" from="Background/Register" to="." method="_on_Register_pressed"]
[connection signal="pressed" from="Background/Cancel" to="." method="_on_Cancel_pressed"]
